--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.2)
 project(templat-app)
 message("Main project directory: ${PROJECT_SOURCE_DIR}")
-#file(GLOB_RECURSE SRC CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/*/*.cpp")
 
+
+enable_testing()
 
 add_subdirectory(src/main)
+add_subdirectory(src/test)
